--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.537.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
