--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.537.0",
     "motion": "^12.23.12",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
